--- a/calorie_count/src/App.css
+++ b/calorie_count/src/App.css
@@ -1,16 +1,11 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 80px;
+  padding:10px;
   color: white;
 }
 
@@ -22,7 +17,12 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.hero{
+  max-width:100%;
+  height:800px;
+  background: black url(./assets/hero_plate_zoomed.jpeg) center no-repeat;
+  /* background-attachment: fixed; */
+  background-size:contain;
+
+
 }
