--- a/calorie_count/src/components/header/header.css
+++ b/calorie_count/src/components/header/header.css
@@ -5,8 +5,6 @@
   color: white;
   display:flex;
   justify-content: space-between;
-  
-  
 }
 nav{
   width:80%;
@@ -14,8 +12,6 @@ nav{
 .navElements{
   display:flex;
   justify-content: space-around;
- 
-  
 }
 .navElements li{
   list-style: none;
@@ -25,7 +21,6 @@ nav{
   text-decoration: none;
   color:white;
   font-size:1.2rem;
-  /* width:3rem; */
 }
 .navElements a:hover{
   /* color:rgb(59, 212, 136); */
@@ -35,5 +30,48 @@ nav{
   padding-bottom:0.6rem;
 }
 
-/* @media(min-width) */
+@media(max-width: 1000px){
+  .navElements{
+    display:flex;
+    flex-direction: column;
+    position: absolute;
+    position:fixed;
+    top:5.25rem;
+    left:0;
+    background:red;
+    width:3rem;
+    height:100%;
+    /* background-color: rgb(65, 60, 60); */
+    background:#34DD9F;
+    box-shadow: 2px 2px 2px  black;
+  }
+  .navElements li{
+    list-style: none;
+    padding:0;
+    margin:0rem -2.4rem 8rem;
+     
+  }
+  .navElements a{
+    text-decoration: none;
+    color:black;
+    font-size:1rem;
+    text-align: center;
+    font-weight:800;
+    padding-left:3px;
+  }
+  .navElements a:hover{
+    color:rgba(255, 255, 255, 0.61);
+    padding-bottom:0.6rem;
+    border-left:5px solid rgba(255, 255, 255, 0.61) ;
+    border-bottom: none;
+  }
 
+}
+@media(max-width: 500px){
+  .navElements{
+    width:1.5rem;
+ }
+ .navElements a{
+   font-size:.7rem;
+ }
+}
