--- a/calorie_count/src/components/header/header.css
+++ b/calorie_count/src/components/header/header.css
@@ -5,6 +5,7 @@
   color: white;
   display:flex;
   justify-content: space-between;
+  
 }
 nav{
   width:80%;
@@ -32,6 +33,7 @@ nav{
 
 @media(max-width: 1000px){
   .navElements{
+    z-index:1000;
     display:flex;
     flex-direction: column;
     position: absolute;
