modified some styling,fixed some styles, background,buttons

--- a/calorie_count/src/components/ContactPage/ContactPage.css
+++ b/calorie_count/src/components/ContactPage/ContactPage.css
@@ -20,6 +20,10 @@
   font-weight: 700;
   text-decoration: none;
 }
+.Links a:hover{
+  color:tomato;
+  
+}
 @media(max-width:450px){
   .ContactPage{
     font-size:0.8rem;
