--- a/calorie_count/src/components/productForm/productForm.css
+++ b/calorie_count/src/components/productForm/productForm.css
@@ -1,11 +1,12 @@
 .BarcodeForm{
   text-align: center;
- 
 }
 .BarcodeInput{
    width:40%;
    height:1.5rem;
    margin:1rem auto;
+   border-radius:5px;
+   border:2px solid black;
 }
 .submitButton{
   border:none;
@@ -14,4 +15,13 @@
   background:tomato;
   cursor:pointer;
   font-size:1.2rem;
+  box-shadow: 1px 1px 1px black;
+}
+.submitButton:hover{
+  transform:scale(1.04)
+}
+@media(max-width:450px){
+  .BarcodeInput{
+    width:60%
+  }
 }
