added the calculations for the nutrients, and some styling to the intake component

--- a/calorie_count/src/components/footer/footer.css
+++ b/calorie_count/src/components/footer/footer.css
@@ -1,6 +1,7 @@
 .footer{
   margin-top:-1rem;
-  background: #222222;
+  /* background: #222222; */
+  background:linear-gradient(rgb(6, 46, 58),rgb(10, 56, 70));
   color:white;
   padding-top:2rem;
   
