--- a/calorie_count/src/containers/CalorieApp/CalorieApp.css
+++ b/calorie_count/src/containers/CalorieApp/CalorieApp.css
@@ -53,7 +53,7 @@ p{
 .Info{
   margin:1rem auto 0;
   width:80%;
-  height:750px;
+  height:600px;
   background:#222222;
   box-shadow: 4px 4px 4px black;
   color:white;
@@ -61,10 +61,18 @@ p{
 }
 .Info ul{
   display:block;
-  margin:0 25%;
+  margin:0 35%;
 }
 .Info li{
   list-style: none;
+  margin:0 auto;
+  display:flex;
+  justify-content: space-between;
+  
+}
+.Info li span{
+  color:dodgerblue;
+  font-weight:700;
 }
 .name{
   font-size:1.5rem;
@@ -102,7 +110,10 @@ p{
   font-size:1rem;
   padding:0.5rem;
 }
-
+.imgDiv{
+  display:flex;
+  flex-wrap:wrap;
+}
 /* spinner */
 .lds {
   display: block;
@@ -139,6 +150,9 @@ p{
    padding-left:1rem;
    height:5rem;
   }
+  .Info ul{
+    margin:0 20%;
+  }
 }
 @media(max-width:600px){
   .CalorieApp{
@@ -153,4 +167,11 @@ p{
     max-width:100%;
     height:auto;
    }
+   .Info ul{
+    margin:0 5%;
+  }
+  .Info{
+    height:780px;
+    background:#222222;
+  }
 }
