--- a/calorie_count/src/containers/CalorieApp/FoodIntake/FoodIntake.css
+++ b/calorie_count/src/containers/CalorieApp/FoodIntake/FoodIntake.css
@@ -8,15 +8,22 @@ h4{
   width:30%;
   margin:1rem auto;
  
+ 
 }
 .form label{
   margin-bottom: 2rem;
 }
-form input[type='submit']{
+.form input[type='submit']{
   background-color:tomato;
   border:none;
   border-radius:5px;
   padding:4px;
+  border:1.5px solid black;
+}
+.form input[type='submit']:hover{
+  cursor: pointer;
+  transform:scale(1.1);
+ 
 }
 .form input[type='text']{
   border:2px solid black;
@@ -24,27 +31,71 @@ form input[type='submit']{
 }
 .info{
   background:linear-gradient(tomato,rgb(40, 168, 207));
-  /* box-shadow: 2px 2px 2px black; */
   border:2px solid black;
   border-radius:5px;
-  width:20%;
+  width:25%;
   height:100px;
   display:block;
   margin:0 auto;
-  padding-top:1rem;
+  padding:1rem 0.5rem 1rem 0.5rem;;
 }
 .info li{
   list-style-type: none;
   display:block;
-  margin:0 auto;
   color:white;
+  display:flex;
+  margin:0 0.5rem 0.5rem 0;
+  justify-content: space-between;
 }
+
 li span{
   font-family:'Lobster', cursive;
 
 }
+.summaryBtn{
+  display:block;
+  margin:0 auto;
+  background:tomato;
+  border: 2px solid black;;
+  color:white;
+  font-weight:700;
+  padding:0.75rem;
+  margin-top:1rem;
+  border-radius:5px;
+}
+.summaryBtn:hover{
+  cursor: pointer;
+
+}
+.hideBtn{
+  display:block;
+  margin:0 auto;
+  background:rgb(235, 231, 6);
+  border: 2px solid black;;
+  color:black;
+  font-weight:700;
+  padding:0.75rem;
+  margin-top:1rem;
+  border-radius:5px;
+}
+.hideBtn:hover{
+  cursor: pointer;
+
+}
+
 @media(max-width:650px){
   .info{
     width:40%
+  }
+  .info li{
+    font-size:0.8rem;
+  }
+  .form{
+        width:80%;
+   }
+   .form input[type='submit']{
+   display:block;
+   margin:0.3rem auto;
+
   }
 }
