--- a/calorie_count/src/components/header/header.css
+++ b/calorie_count/src/components/header/header.css
@@ -25,6 +25,10 @@ nav{
   color:white;
   font-size:1.2rem;
 }
+/* .navElements a:active {
+  color:blue;
+  background:red;
+} */
 .navElements a:hover{
   /* color:rgb(59, 212, 136); */
   color:tomato;
@@ -32,6 +36,7 @@ nav{
   border-bottom:2px solid tomato;
   padding-bottom:0.6rem;
 }
+
 
 @media(max-width: 1000px){
   .navElements{
