--- a/calorie_count/src/containers/CalorieApp/CalorieApp.css
+++ b/calorie_count/src/containers/CalorieApp/CalorieApp.css
@@ -88,7 +88,8 @@ p{
   transition: all 0.5s ease-in;
 }
 .HowTo:hover{
-  transform: scale(1.05)
+  transform: scale(1.05);
+  filter:hue-rotate(20deg)
 }
 .description{
   display:flex;
