--- a/calorie_count/src/index.css
+++ b/calorie_count/src/index.css
@@ -3,3 +3,25 @@ body {
   padding: 0;
   font-family: 'Lato',sans-serif;
 }
+@media only screen and (max-width : 768px) {
+  .animated {
+
+    -o-transition-property: none !important;
+    -moz-transition-property: none !important;
+    -ms-transition-property: none !important;
+    -webkit-transition-property: none !important;
+    transition-property: none !important;
+
+    -o-transform: none !important;
+    -moz-transform: none !important;
+    -ms-transform: none !important;
+    -webkit-transform: none !important;
+    transform: none !important;
+    
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important;
+  }
+}
