--- a/calorie_count/src/containers/CalorieApp/FoodIntake/FoodIntake.css
+++ b/calorie_count/src/containers/CalorieApp/FoodIntake/FoodIntake.css
@@ -1,3 +1,12 @@
+.potato img{
+  max-width:250px;
+  display:block;
+  border:2px solid #000000;
+  margin:1rem auto;
+}
+.potato h3{
+  text-align: center;
+}
 h4{
   text-align: center;
   margin:0;
