--- a/calorie_count/src/components/hero/hero.css
+++ b/calorie_count/src/components/hero/hero.css
@@ -24,6 +24,8 @@
   line-height: 1.5;
   margin: 5rem 10%;
   text-shadow: 2px 2px 1px black;
+  background: #ffffff3b;
+  border-radius: 35px;
 }
 .highlight{
   color:white;
@@ -40,7 +42,7 @@
     .Hero p{
       font-size:1.4rem;
       margin: 10rem 7rem;;
-      
+
     }
 }
 @media(max-width:650px){
@@ -52,7 +54,7 @@
     .hero p{
       font-size:1.1rem;
       margin: 10rem 0.5rem 0 5.8rem; ;;
-      
+
     }
 }
 @media(max-width:450px){
@@ -64,6 +66,6 @@
     .hero p{
       font-size:1.1rem;
       margin: 3rem 0.5rem 0 5.8rem; ;;
-      
+
     }
 }
