--- a/calorie_count/src/components/productForm/productForm.css
+++ b/calorie_count/src/components/productForm/productForm.css
@@ -13,10 +13,11 @@
   border:none;
   padding:1rem;
   color:white;;
-  background:tomato;
+  background:#E93925;
   cursor:pointer;
-  font-size:1.2rem;
+  font-size:1rem;
   box-shadow: 1px 1px 1px black;
+  border-radius:5px ;
 }
 .submitButton:hover{
   transform:scale(1.04)
