--- a/calorie_count/src/containers/CalorieApp/CalorieApp.css
+++ b/calorie_count/src/containers/CalorieApp/CalorieApp.css
@@ -1,14 +1,19 @@
 .CalorieApp{
-  background:linear-gradient(rgb(97, 201, 144),rgb(40, 168, 207));
+  /* background:linear-gradient(rgb(97, 201, 144),rgb(40, 168, 207)); */
+  padding-top:3rem;
+  background:linear-gradient(rgb(18, 19, 18),rgb(40, 168, 207));
 }
 .CalorieApp h1{
   margin:0;
   padding:1rem 0;
   text-align: center;
   font-family: 'Lobster', cursive;
+  color:white;
 }
 .CalorieApp p{
   text-align: center;
+  color:white;
+  font-weight: normal;
 }
 .BarcodeForm{
   text-align: center;
@@ -22,7 +27,7 @@
   border:none;
   padding:1rem;
   color:white;;
-  background:tomato;
+  background:#E93925;
   cursor:pointer;
   font-size:1.2rem;
 }
@@ -31,8 +36,8 @@
   margin:0 auto;
   max-width: 100%;
   max-height:300px;
-  
-  
+
+
 }
 .productImgNutrition{
   display:block;
@@ -44,11 +49,11 @@ p{
   font-weight:bold;
   text-align: center;
   margin-right:2rem;
-  
+
 }
 .Info img{border: 3px solid grey;
   max-width:100%;
-  
+
 }
 .Info{
   margin:1rem auto 0;
@@ -69,7 +74,7 @@ p{
   margin:0 auto;
   display:flex;
   justify-content: space-between;
-  
+
 }
 .Info li span{
   color:dodgerblue;
@@ -87,10 +92,10 @@ p{
   height:200px;
   transition: all 0.5s ease-in;
 }
-.HowTo:hover{
+/* .HowTo:hover{
   transform: scale(1.05);
   filter:hue-rotate(20deg)
-}
+} */
 .description{
   display:flex;
   flex-wrap:wrap;
@@ -102,7 +107,7 @@ p{
 .description div img{
  max-width:100%;
  height:auto;
- width:170px;
+ width:120px;
 }
 .error{
   background-color:tomato;
@@ -117,7 +122,7 @@ p{
   flex-wrap:wrap;
 }
 /* spinner */
-.lds {
+/* .lds {
   display: block;
   width: 64px;
   height: 64px;
@@ -133,7 +138,7 @@ p{
   border: 5px solid #fff;
   border-color: #fff transparent #fff transparent;
   animation: lds 1.2s linear infinite;
-}
+} */
 
 @keyframes lds{
   0% {
@@ -175,5 +180,49 @@ p{
   .Info{
     height:780px;
     background:#222222;
+  }
+}
+
+/*spinner*/
+
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+.loader {
+  margin: 60px auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-left: 1.1em solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
