--- a/calorie_count/src/containers/CalorieApp/CalorieApp.css
+++ b/calorie_count/src/containers/CalorieApp/CalorieApp.css
@@ -2,6 +2,7 @@
   /* background:linear-gradient(rgb(97, 201, 144),rgb(40, 168, 207)); */
   padding-top:3rem;
   background:linear-gradient(rgb(18, 19, 18),rgb(40, 168, 207));
+  height:auto
 }
 .CalorieApp h1{
   margin:0;
@@ -27,7 +28,7 @@
   border:none;
   padding:1rem;
   color:white;;
-  background:#E93925;
+  background:tomato;
   cursor:pointer;
   font-size:1.2rem;
 }
@@ -100,14 +101,23 @@ p{
   display:flex;
   flex-wrap:wrap;
   justify-content: space-around;
+  margin-top: 4rem;
 }
 .description div{
-  margin:0 1rem;
+  width:300px;
+}
+.description div p{
+ text-align: center;
+ margin-left:2rem;
 }
 .description div img{
  max-width:100%;
  height:auto;
  width:120px;
+}
+
+.easy {
+  margin-left:3rem;
 }
 .error{
   background-color:tomato;
