--- a/calorie_count/src/containers/CalorieApp/FoodIntake/FoodIntake.css
+++ b/calorie_count/src/containers/CalorieApp/FoodIntake/FoodIntake.css
@@ -6,6 +6,7 @@
 }
 .potato h3{
   text-align: center;
+  margin-bottom: 0;
 }
 h4{
   text-align: center;
@@ -16,6 +17,7 @@ h4{
    display: block;
   width:30%;
   margin:1rem auto;
+  width:300px;
  }
 .form label{
    margin-bottom: 1rem;
@@ -81,7 +83,7 @@ li span{
 
 }
 .intakeContainer {
-   height:300px;
+   min-height:300px;
 }
 .msg {
   margin-left:2rem;
@@ -109,6 +111,9 @@ li span{
   cursor: pointer;
 
 }
+.showInfo {
+  min-height:300px;
+}
 
 @media(max-width:650px){
   .info{
@@ -118,7 +123,7 @@ li span{
     font-size:0.8rem;
   }
   .form{
-        width:80%;
+        /* width:80%; */
    }
    .form input[type='submit']{
    display:block;
